k8s/app1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app1
  labels:
    app:  nodejs-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  nodejs-app1
  template:
    metadata:
      labels:
        app:  nodejs-app1
    spec:
      containers:
      - name:  nodejs-app1
        image: narioinc89/mtls-app1
        ports:
        - containerPort: 3000
