k8s/app2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app2
  labels:
    app:  nodejs-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  nodejs-app2
  template:
    metadata:
      labels:
        app:  nodejs-app2
    spec:
      containers:
      - name:  nodejs-app2
        image: narioinc89/mtls-app2
        ports:
        - containerPort: 4000
