k8s/app1_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app1
spec:
  selector:
    app: nodejs-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
