k8s/app2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app2
spec:
  selector:
    app: nodejs-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
