k8s/ipgeo_service_entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-https
spec:
  hosts:
  - ipinfo.io
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: https
    protocol: https
  resolution: DNS
